repaired description overflow bug

--- a/src/main.scss
+++ b/src/main.scss
@@ -550,6 +550,7 @@ main{
     }
     .description{
         flex-basis: 95%;
+        overflow: hidden;
         margin-top: 3em;
         padding: 3em;
         text-align: inherit;
@@ -571,9 +572,15 @@ main{
             cursor: pointer;
             figure{
                 width: 100%;
+                height: 15em;
+                overflow: hidden;
+                position: relative;
                 img{
+                    position: absolute;
+                    bottom: 15%;
+                    left: 0;
                     width: 100%;
-                    height: 100%;
+
                 }
             }
             .price{
